Changing PluralSight Logo

--- a/HRNUG/Views/Home/_Sponsors.cshtml
+++ b/HRNUG/Views/Home/_Sponsors.cshtml
@@ -37,7 +37,7 @@
                 <img src="/Images/Sponsors/OReilly-Logo.jpeg" class="sponsorLogo" alt="Oreilly Logo"/>
             </div>
             <div class="col-md-1">
-                <img src="/Images/Sponsors/PluralSight-Logo.jpeg" class="sponsorLogo" alt="Pluralsight Logo"/>
+                <img src="/Images/Sponsors/PluralSight-Logo.png" class="sponsorLogo" alt="Pluralsight Logo"/>
             </div>
             <div class="col-md-1">
                 <img src="/Images/Sponsors/Telerik-Logo.jpeg" class="sponsorLogo" alt="Telerik Logo"/>
