Removing Mailing Lists

--- a/HRNUG/Views/Home/_Events.cshtml
+++ b/HRNUG/Views/Home/_Events.cshtml
@@ -37,14 +37,12 @@
             </div>
             <div class="col-md-6">
                 <h2>Stay in Touch</h2>
-                <a href="http://eepurl.com/zdLB" class="btn btn-primary" target="_blank">Subscribe to our Mailing List &raquo;</a>
-                <a href="http://eepurl.com/i73Wj" class="btn btn-primary" target="_blank">Subscribe to our Jobs List &raquo;</a>
                 <div id="slack">
                     <h4>Have You Heard of Slack?</h4>
                     <p>
                         Slack is a great way to chat real-time with local developers in various chat rooms. Think of IRC on steroids :-)
                     </p>
-                    <a href="http://757dev.org/" target="_blank" title="Slack" class="btn btn-warning">Join the 757 Dev Slack!</a>
+                    <a href="http://757dev.org/" target="_blank" title="Slack" class="btn btn-primary">Join the 757 Dev Slack!</a>
                 </div>
                 <div id="twitterWidget">
                     <!-- Twitter Widget -->
