--- a/HRNUG/Views/Home/_Sponsors.cshtml
+++ b/HRNUG/Views/Home/_Sponsors.cshtml
@@ -4,61 +4,34 @@
             <h2>People That Make This Happen</h2>
         </div>
         <div class="row margin-top">
-            <div class="col-md-2 col-md-offset-1">
-                <img src="/Images/Sponsors/TEK-Logo.jpg" class="sponsorLogo" alt="TEKSystems Logo"/>
+            <div class="col-md-3">
+                <a href="http://www.teksystems.com/" target="_blank"><img src="/Images/Sponsors/TEK-Logo.jpg" class="sponsorLogo" alt="TEKSystems Logo" /></a>
             </div>
-            <div class="col-md-2">
-                <img src="/Images/Sponsors/UDig-Logo.jpg" class="sponsorLogo" alt="UDig Logo"/>
+            <div class="col-md-3">
+                <a href="http://www.primerica.com/public/primerica-investments.html" target="_blank"><img src="/Images/Sponsors/PFS-Logo.jpg" class="sponsorLogo" alt="PFS Logo" /></a>
             </div>
-            <div class="col-md-2">
-                <img src="/Images/Sponsors/CRT-Logo.jpg" class="sponsorLogo" alt="CRT Logo"/>
+            <div class="col-md-3">
+                <a href="http://www.apexsystemsinc.com/" target="_blank"><img src="/Images/Sponsors/Apex-Logo.png" class="sponsorLogo" alt="Apex Logo" /></a>
             </div>
-            <div class="col-md-2">
-                <img src="/Images/Sponsors/Vaco-Logo.png" class="sponsorLogo" alt="Vaco Logo"/>
-            </div>
-            <div class="col-md-2">
-                <img src="/Images/Sponsors/Marathon-Logo.png" class="sponsorLogo" alt="Marathon Logo"/>
+            <div class="col-md-3">
+                <a href="http://www.marathonus.com/" target="_blank"><img src="/Images/Sponsors/Marathon-Logo.png" class="sponsorLogo" alt="Marathon Logo" /></a>
             </div>
         </div>
         <div class="row margin-top">
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/CodeSmith-Logo.jpeg" class="sponsorLogo" alt="Codesmith Logo"/>
+            <div class="col-md-2 col-md-offset-2">
+                <a href="https://www.jetbrains.com/" target="_blank"><img src="/Images/Sponsors/JetBrains-Logo.jpeg" class="sponsorLogo" alt="JetBrains Logo" /></a>
             </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/Github-Logo.jpeg" class="sponsorLogo" alt="Github Logo"/>
-            </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/Infragistics-Logo.jpeg" class="sponsorLogo" alt="Infragistics Logo"/>
-            </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/JetBrains-Logo.jpeg" class="sponsorLogo" alt="JetBrains Logo"/>
-            </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/OReilly-Logo.jpeg" class="sponsorLogo" alt="Oreilly Logo"/>
-            </div>
-            <div class="col-md-1">
+            <div class="col-md-2">
                 <a href="http://www.pluralsight.com/" target="_blank"><img src="/Images/Sponsors/PluralSight-Logo.png" class="sponsorLogo" alt="Pluralsight Logo" /></a>
             </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/Telerik-Logo.jpeg" class="sponsorLogo" alt="Telerik Logo"/>
+            <div class="col-md-2">
+                <a href="http://www.telerik.com/" target="_blank"><img src="/Images/Sponsors/Telerik-Logo.jpeg" class="sponsorLogo" alt="Telerik Logo" /></a>
             </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/NCover-Logo.jpeg" class="sponsorLogo" alt="NCover Logo"/>
-            </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/Apress-Logo.jpeg" class="sponsorLogo" alt="Apress Logo"/>
-            </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/Syncfusion-Logo.jpeg" class="sponsorLogo" alt="Syncfusion Logo"/>
-            </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/WintellectNow-Logo.jpeg" class="sponsorLogo" alt="WintellectNow Logo"/>
-            </div>
-            <div class="col-md-1">
-                <img src="/Images/Sponsors/Nevron-Logo.jpeg" class="sponsorLogo" alt="Nevron Logo"/>
+            <div class="col-md-2">
+                <a href="http://www.codemag.com/magazine" target="_blank"><img src="/Images/Sponsors/CodeMag-Logo.png" class="sponsorLogo" alt="CodeMag Logo" /></a>
             </div>
         </div>
-        <div class="row margin-top" >
+        <div class="row margin-top">
             <div class="col-md-6 col-md-offset-3 text-center" id="whySponsor">
                 <h3>Why Sponsor HRNUG?</h3>
                 <p>
