--- a/HRNUG/Views/Home/_Sponsors.cshtml
+++ b/HRNUG/Views/Home/_Sponsors.cshtml
@@ -32,6 +32,20 @@
             </div>
         </div>
         <div class="row margin-top">
+            <div class="col-md-2 col-md-offset-2">
+                
+            </div>
+            <div class="col-md-2">
+                <a href="http://www.aspose.com/" target="_blank"><img src="/Images/Sponsors/Aspose-Logo.jpg" class="sponsorLogo" alt="Aspose Logo" /></a>
+            </div>
+            <div class="col-md-2">
+                <a href="https://timemachinefor.net/" target="_blank"><img src="/Images/Sponsors/TimeMachine-Logo.png" class="sponsorLogo" alt="TimeMachine Logo" /></a>
+            </div>
+            <div class="col-md-2">
+                
+            </div>
+        </div>
+        <div class="row margin-top">
             <div class="col-md-6 col-md-offset-3 text-center" id="whySponsor">
                 <h3>Why Sponsor HRNUG?</h3>
                 <p>
