replace speak email with my hrnug email

--- a/HRNUG/Views/Home/_Info.cshtml
+++ b/HRNUG/Views/Home/_Info.cshtml
@@ -12,7 +12,7 @@
                 HRNUG has been providing amazing .NET speakers and content since founded by Kevin Griffin in 2009 and we are always open to speakers of any level to engage with our users. We would love to have you present to our local community and invite you to speak during one of our monthly presentations. We have an average of 20-30 attendees at our meetings and are an INETA accredited user group.
             </p>
             <p>
-                If interested, please send an email to <a href="mailto:speak@hrnug.org" class="yellow">speak@hrnug.org</a> with the month you would like and a few topics we can choose from. 
+                If interested, please send an email to <a href="mailto:john.hadzima@hrnug.org" class="yellow">john.hadzima@hrnug.org</a> with the month you would like and a few topics we can choose from. 
             </p>
         </div>
     </div>
