remove Jobs menu link, remove join slack button since 757dev is down and replace with an email address, add Devart as sponsor, link Kevin and John's names to twitter accounts

--- a/HRNUG/Views/Home/_Events.cshtml
+++ b/HRNUG/Views/Home/_Events.cshtml
@@ -42,7 +42,8 @@
                     <p>
                         Slack is a great way to chat real-time with local developers in various chat rooms. Think of IRC on steroids :-)
                     </p>
-                    <a href="http://757dev.org/" target="_blank" title="Slack" class="btn btn-primary">Join the 757 Dev Slack!</a>
+                    <p>To get access to <b>757 Dev Slack</b>, send us an <a href="mailto:john.hadzima@hrnug.org">email</a> and we'll get you setup.</p>
+                    @*<a href="http://757dev.org/" target="_blank" title="Slack" class="btn btn-primary">Join the 757 Dev Slack!</a>*@
                 </div>
                 <div id="twitterWidget">
                     <!-- Twitter Widget -->
