--- a/HRNUG/Views/Home/_Sponsors.cshtml
+++ b/HRNUG/Views/Home/_Sponsors.cshtml
@@ -33,16 +33,16 @@
         </div>
         <div class="row margin-top">
             <div class="col-md-2 col-md-offset-2">
-                
-            </div>
-            <div class="col-md-2">
                 <a href="http://www.aspose.com/" target="_blank"><img src="/Images/Sponsors/Aspose-Logo.jpg" class="sponsorLogo" alt="Aspose Logo" /></a>
             </div>
             <div class="col-md-2">
                 <a href="https://timemachinefor.net/" target="_blank"><img src="/Images/Sponsors/TimeMachine-Logo.png" class="sponsorLogo" alt="TimeMachine Logo" /></a>
             </div>
             <div class="col-md-2">
-                
+                <a href="https://www.devart.com/" target="_blank"><img src="~/Images/Sponsors/Devart-Logo.png" class="sponsorLogo" alt="Devart Logo" /></a>
+            </div>
+            <div class="col-md-2">
+
             </div>
         </div>
         <div class="row margin-top">
@@ -58,7 +58,7 @@
                     Our weekly meeting invitations and announcements reach over 300 developers. It’s a perfect opportunity for us to help promote your product or services.
                 </p>
                 <p>
-                    Email <a href="mailto:john.hadzima@hrnug.org">john.hadzima@hrnug.org</a> for more info.
+                    <a href="mailto:john.hadzima@hrnug.org">Email</a> meeting organizer <a target="_blank" href="https://twitter.com/JohnHadzima">John Hadzima</a> for more info.
                 </p>
             </div>
         </div>
