--- a/HRNUG/Views/Shared/_Layout.cshtml
+++ b/HRNUG/Views/Shared/_Layout.cshtml
@@ -25,14 +25,13 @@
                     <li><a href="#speakers">Speakers</a></li>
                     <li><a href="#sponsors">Sponsors</a></li>
                     <li><a href="http://www.meetup.com/Hampton-Roads-NET-Users-Group/messages/boards/" target="_blank" title="Forums">Forums</a></li>
-                    <li><a href="http://www.meetup.com/Hampton-Roads-NET-Users-Group/messages/boards/thread/48183712" target="_blank" title="Jobs">Jobs</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="https://github.com/hrnug" target="_blank" title="GitHub" class="hrnug-nav-image-a"><img src="~/Images/GitHub-Mark-32px.png" alt="GitHub Logo" /></a></li>
                     <li><a href="https://twitter.com/hrnug" target="_blank" title="Twitter" class="hrnug-nav-image-a"><img src="~/Images/Twitter-Logo-Blue.png" alt="Twitter Logo" /></a></li>
                     <li><a href="http://www.meetup.com/Hampton-Roads-NET-Users-Group/" target="_blank" title="Meetup" class="hrnug-nav-image-a"><img src="~/Images/Meetup-Logo.png" alt="Meetup Logo"/></a></li>
                     <li><a href="https://www.linkedin.com/grp/home?gid=1779534" target="_blank" title="LinkedIn" class="hrnug-nav-image-a"><img src="~/Images/LinkedIn-Logo.png" alt="LinkedIn Logo" /></a></li>
-                    <li><a href="http://757dev.org/" target="_blank" title="Slack" class="hrnug-nav-image-a"><img src="~/Images/Slack-Logo.png" alt="Slack Logo" /></a></li>
+                    <li><a href="https://757dev.slack.com" target="_blank" title="Slack" class="hrnug-nav-image-a"><img src="~/Images/Slack-Logo.png" alt="Slack Logo" /></a></li>
                 </ul>
             </div>
         </div>
