--- a/HRNUG/Views/Home/_Events.cshtml
+++ b/HRNUG/Views/Home/_Events.cshtml
@@ -2,6 +2,20 @@
 <section class="padding-5px" id="events">
     <div class="container body-content">
         <div class="row">
+            <div class="col-md-12">
+                <h2 class="text-center">We Are Moving!</h2>
+                <p class="margin-top">
+                    Starting <b>January 10th</b>, all HRNUG meetings will be held at Issuetrak, 6160 Kempsville Circle, Norfolk, VA 23502.  Please use the enterance that faces Kempsville Road.  Once you go
+                    in the doors, the room is the first door on the left.
+                    
+                </p>
+                <div class="text-center" style="height:275px">
+                    <a href="https://www.google.com/maps/place/6160+Kempsville+Circ,+Norfolk,+VA+23502" target="_blank"><img src="~/Images/issuetrak_building.png" alt="Issuetrak Building" /></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-6">
                 <h2>Upcoming Events</h2>
                 @if (Model.Events != null && Model.Events.Any())
