Location and sponsor changes.

--- a/HRNUG/Views/Home/_Events.cshtml
+++ b/HRNUG/Views/Home/_Events.cshtml
@@ -1,19 +1,6 @@
 ﻿@model HRNUG.ViewModels.HomeViewModel
 <section class="padding-5px" id="events">
     <div class="container body-content">
-        <div class="row">
-            <div class="col-md-12">
-                <h2 class="text-center">We Are Moving!</h2>
-                <p class="margin-top">
-                    Starting <b>January 10th</b>, all HRNUG meetings will be held at Issuetrak, 6160 Kempsville Circle, Norfolk, VA 23502.  Please use the enterance that faces Kempsville Road.  Once you go
-                    in the doors, the room is the first door on the left.
-                    
-                </p>
-                <div class="text-center" style="height:275px">
-                    <a href="https://www.google.com/maps/place/6160+Kempsville+Circ,+Norfolk,+VA+23502" target="_blank"><img src="~/Images/issuetrak_building.png" alt="Issuetrak Building" /></a>
-                </div>
-            </div>
-        </div>
 
         <div class="row">
             <div class="col-md-6">
@@ -40,14 +27,17 @@
                     <p>There are no events currently scheduled...</p>
                 }
                 <p class="text-center margin-top">
-                    We meet the <span class="bold">2nd Tuesday</span> of every month at <a href="http://www.infotectraining.com/" target="_blank">Infotec</a>.<br />
-                    <br />
-                    100 Constitution Drive<br />
-                    Virginia Beach, VA 23462<br />
+                    We meet the <span class="bold">2nd Tuesday</span> of every month at <a href="http://www.issuetrak.com/" target="_blank">Issuetrak</a>.<br />
+                    <br /><a href="https://www.google.com/maps/place/6160+Kempsville+Circle+,Norfolk+VA+23502" target="_blank">
+                        6160 Kempsville Circle<br />
+                        Norfolk, VA 23502
+                    </a><br /><br />
+                    Please use the east entrance facing Kempsville Road.<br/>
                 </p>
-                <div class="text-center">
-                    <a href="https://www.google.com/maps/place/100+Constitution+Dr,+Virginia+Beach,+VA+23462" target="_blank"><img src="~/Images/Infotec-Map.png" alt="Infotec Map" /></a>
-                </div>
+                @*<div style="height:250px; width:250px;">
+                    <a href="https://www.google.com/maps/place/6160+Kempsville+Circle+,Norfolk+VA+23502" target="_blank">
+                    <img src="~/Images/issuetrak_building.png" alt="Issuetrak Map" height="200" width="200"/></a>
+                </div>*@
             </div>
             <div class="col-md-6">
                 <h2>Stay in Touch</h2>
