--- a/HRNUG/Views/Home/_Sponsors.cshtml
+++ b/HRNUG/Views/Home/_Sponsors.cshtml
@@ -5,16 +5,14 @@
         </div>
         <div class="row margin-top">
             <div class="col-md-3">
-                <a href="http://www.teksystems.com/" target="_blank"><img src="/Images/Sponsors/TEK-Logo.jpg" class="sponsorLogo" alt="TEKSystems Logo" /></a>
             </div>
             <div class="col-md-3">
-                <a href="http://www.primerica.com/public/primerica-investments.html" target="_blank"><img src="/Images/Sponsors/PFS-Logo.jpg" class="sponsorLogo" alt="PFS Logo" /></a>
-            </div>
-            <div class="col-md-3">
-                <a href="http://www.apexsystemsinc.com/" target="_blank"><img src="/Images/Sponsors/Apex-Logo.png" class="sponsorLogo" alt="Apex Logo" /></a>
+                <a href="http://swiftkick.in/" target="_blank"><img src="/Images/Sponsors/SwiftKick-Logo.png" class="sponsorLogo" alt="Swift Kick Logo" /></a>
             </div>
             <div class="col-md-3">
                 <a href="http://www.marathonus.com/" target="_blank"><img src="/Images/Sponsors/Marathon-Logo.png" class="sponsorLogo" alt="Marathon Logo" /></a>
+            </div>
+            <div class="col-md-3">
             </div>
         </div>
         <div class="row margin-top">
@@ -25,7 +23,7 @@
                 <a href="http://www.pluralsight.com/" target="_blank"><img src="/Images/Sponsors/PluralSight-Logo.png" class="sponsorLogo" alt="Pluralsight Logo" /></a>
             </div>
             <div class="col-md-2">
-                <a href="http://www.telerik.com/" target="_blank"><img src="/Images/Sponsors/Telerik-Logo.jpeg" class="sponsorLogo" alt="Telerik Logo" /></a>
+                <a href="http://www.aspose.com/" target="_blank"><img src="/Images/Sponsors/Aspose-Logo.jpg" class="sponsorLogo" alt="Aspose Logo" /></a>                
             </div>
             <div class="col-md-2">
                 <a href="http://www.codemag.com/magazine" target="_blank"><img src="/Images/Sponsors/CodeMag-Logo.png" class="sponsorLogo" alt="CodeMag Logo" /></a>
@@ -33,16 +31,12 @@
         </div>
         <div class="row margin-top">
             <div class="col-md-2 col-md-offset-2">
-                <a href="http://www.aspose.com/" target="_blank"><img src="/Images/Sponsors/Aspose-Logo.jpg" class="sponsorLogo" alt="Aspose Logo" /></a>
             </div>
             <div class="col-md-2">
-                <a href="https://timemachinefor.net/" target="_blank"><img src="/Images/Sponsors/TimeMachine-Logo.png" class="sponsorLogo" alt="TimeMachine Logo" /></a>
             </div>
             <div class="col-md-2">
-                <a href="https://www.devart.com/" target="_blank"><img src="~/Images/Sponsors/Devart-Logo.png" class="sponsorLogo" alt="Devart Logo" /></a>
             </div>
             <div class="col-md-2">
-
             </div>
         </div>
         <div class="row margin-top">
