--- a/HRNUG/Views/Home/_Events.cshtml
+++ b/HRNUG/Views/Home/_Events.cshtml
@@ -46,8 +46,7 @@
                     <p>
                         Slack is a great way to chat real-time with local developers in various chat rooms. Think of IRC on steroids :-)
                     </p>
-                    <p>To get access to <b>757 Dev Slack</b>, send us an <a href="mailto:john.hadzima@hrnug.org">email</a> and we'll get you setup.</p>
-                    @*<a href="http://757dev.org/" target="_blank" title="Slack" class="btn btn-primary">Join the 757 Dev Slack!</a>*@
+                    <a href="https://slackin757dev.herokuapp.com" target="_blank" title="Slack" class="btn btn-primary">Join the 757 Dev Slack!</a>
                 </div>
                 <div id="twitterWidget">
                     <!-- Twitter Widget -->
