add issuetrak as sponsor

--- a/HRNUG/Views/Home/_Sponsors.cshtml
+++ b/HRNUG/Views/Home/_Sponsors.cshtml
@@ -4,15 +4,14 @@
             <h2>People That Make This Happen</h2>
         </div>
         <div class="row margin-top">
-            <div class="col-md-3">
-            </div>
-            <div class="col-md-3">
+            <div class="col-md-3 col-md-offset-1">
                 <a href="http://swiftkick.in/" target="_blank"><img src="/Images/Sponsors/SwiftKick-Logo.png" class="sponsorLogo" alt="Swift Kick Logo" /></a>
             </div>
             <div class="col-md-3">
                 <a href="http://www.marathonus.com/" target="_blank"><img src="/Images/Sponsors/Marathon-Logo.png" class="sponsorLogo" alt="Marathon Logo" /></a>
             </div>
             <div class="col-md-3">
+                <a href="http://www.issuetrak.com/" target="_blank"><img src="/Images/Sponsors/Issuetrak-Logo.png" class="sponsorLogo" alt="Issuetrak Logo" /></a>
             </div>
         </div>
         <div class="row margin-top">
